--- a/template/index.html
+++ b/template/index.html
@@ -6,8 +6,14 @@
     <title>Homepage</title>
 </head>
 <body>
-    <h1>Welcome to the Homepage</h1>
-    <a href="http://127.0.0.1:5000/about">About Page Link</a><br>
-    <a href="http://127.0.0.1:5000/data">Data Page Links</a>
+    <center>
+        <h1>Welcome to the Homepage</h1>
+        <h3>Abdul Rahim Mulla - 0856329</h3>
+        <h3>Opita Amarasiriwardene - 0841577</h3>
+        <h3>Ajay kurmaiahgari - </h3>
+        <a href="http://127.0.0.1:5000/about">About Page Link</a><br>
+        <a href="http://127.0.0.1:5000/data">Data Page Links</a>
+    </center>
+
 </body>
 </html>
