--- a/template/about.html
+++ b/template/about.html
@@ -1,55 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-
 <body>
     <h1>About Page</h1>
     <p>This is About Page.</p>
+    <p>Coffee Shop Sales</p>
+    <p>Transaction records for Maven Roasters, a fictitious coffee shop operating out of three NYC locations. Dataset includes the transaction date, timestamp and location, along with product-level details.</p>
     <p>Data Source: <a href="https://www.kaggle.com/datasets/ahmedabbas757/coffee-sales/data"> Kaggle DataSet Link</a> </p>
     <table>
         <tr>
             <th>Data Defination</th>
         </tr>
+
+
         <tr>
-            <td>transaction_id : Unique sequential ID representing an individual transaction</td>
+            <td>transaction_id : Unique sequential ID representing an individual transaction:INTEGER</td>
         </tr>
         <tr>
-            <td>transaction_date : Date of the transaction (MM/DD/YY)</td>
+            <td>transaction_date : Date of the transaction (MM/DD/YY): DATE</td>
         </tr>
         <tr>
-            <td>transaction_time : Timestamp of the transaction (HH:MM:SS)</td>
+            <td>transaction_time : Timestamp of the transaction (HH:MM:SS) : TEXT</td>
         </tr>
         <tr>
-            <td>transaction_qty : Quantity of items sold</td>
+            <td>transaction_qty : Quantity of items sold : INTEGER</td>
         </tr>
-        <td>transaction_qty : Quantity of items sold</td>
+        <td>transaction_qty : Quantity of items sold : INTEGER</td>
         <tr>
         <tr>
-            <td>store_id : Unique ID of the coffee shop where the transaction took place</td>
+            <td>store_id : Unique ID of the coffee shop where the transaction took place : INTEGER </td>
         </tr>
         <tr>
-            <td>store_location : Location of the coffee shop where the transaction took place</td>
+            <td>store_location : Location of the coffee shop where the transaction took place : TEXT</td>
         </tr>
         <tr>
-            <td>product_id : Unique ID of the product sold</td>
+            <td>product_id : Unique ID of the product sold: INTEGER</td>
         </tr>
-        <td>unit_price : Retail price of the product sold</td>
-        </tr>
-        <tr>
-            <td>product_category : Description of the product category</td>
+        <td>unit_price : Retail price of the product sold: REAL</td>
         </tr>
         <tr>
-            <td>product_type : Description of the product type</td>
+            <td>product_category : Description of the product category : TEXT</td>
         </tr>
         <tr>
-            <td>product_detail : Description of the product detail</td>
+            <td>product_type : Description of the product type : TEXT</td>
+        </tr>
+        <tr>
+            <td>product_detail : Description of the product detail:TEXT</td>
         </tr>
     </table>
 </body>
-
-</html>
